[project]
name = "Efficient"
version = "4.0.0"
description = "Model Selection Tool"
authors = [{name = "Kunal", email = "kunalsharma122004@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "xgboost",
    "shap",
    "joblib",
    "rich"
]
# Added GitHub repository link
urls = { "Homepage" = "https://github.com/Kxkunals/Data_Analysis" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["Efficient"]
